# LiveMCPBench

./: .env_template  .gitignore  README.md  index.html  pyproject.toml
annotated_data/: git.bundle
annotated_data/excel/: goods.xlsx
annotated_data/txt/: log_today.txt  log_yesterday.txt  paper_list.bib
annotated_data/word/: Report_Card.docx
baseline/: run_conversation.py
baseline/annotation/: claude-sonnet-4-20250514_Qwen3-Embedding-0.6B.json
baseline/data/: example_queries.json
baseline/mcp_copilot/: __main__.py  arg_generation.py  matcher.py  mcp_connection.py  router.py  server.py
baseline/mcp_copilot/config/: clean_config.json
baseline/output/: claude-sonnet-4-20250514_Qwen3-Embedding-0.6B.json
baseline/scripts/: run_baselines.sh  run_baselines_lark.sh  run_example.sh
evaluator/: human_agreement.py  llm_as_judge_baseline.py  stat_success_rate.py
evaluator/output/: human_agreement_claude-sonnet-4-20250514_Qwen3-Embedding-0.6B.csv
evaluator/scripts/: ablation_evaluator.sh  ablation_evaluator_autokey.sh  run_baseline.sh  run_baseline_autokey.sh  run_example.sh
scripts/: docker_reset.sh  env_reset.sh  link_path.sh
static/js/: index.js
tools/: crawl_readme.py  creat_clean_config.py
tools/LiveMCPTool/: all_config.json  tools.json
tools/raw_data/: clean_config.json  file_config.json  no_config.json
tools/scripts/: crawl_tool.sh  tool_check.sh
utils/: clogger.py  connect_mcp_server.py  get_git_dir.sh  lark_reporter.py  llm_api.py  mcp_client.py  my_types.py  tool_execute.py  watchdog_lark.py
(+11 files in other folders)
